# onepass-audio

./: .editorconfig  .gitignore  CHANGELOG_R2.md  CHANGELOG_R3.md  CHANGELOG_R5.md  R3_log_excerpt.txt  R5_web_console_log.txt  README.diff.md  README.md  VERIFY.md  config.sample.yaml  onepass_main.py  onepass_main_report.md  pyproject.toml  requirements.txt
config/: README.md  alias_map_zh.json  char_map_no_breaks.json  compat_map_zh.json  default_alias_map.json  default_char_map.json  default_config.json
data/: 002序言02_天真的信息观.txt  005序言05_前方的道路.txt  007第一部分人类网络_第一章02_真相究竟是什么.txt  008第一部分人类网络_第一章03_信息有何作用.txt  010第一部分人类网络_第二章01_故事：无限的联结.txt  012第一部分人类网络_第二章02_故事的力量.txt  013第一部分人类网络_第二章03_高贵的谎言.txt  014第一部分人类网络_第二章04_长久以来的困境.txt  016第一部分人类网络_第三章02_“杀掉”贷款.txt  017第一部分人类网络_第三章03_官僚制度.txt  018第一部分人类网络_第三章04_官僚制度和对真相的探索.txt  019第一部分人类网络_第三章05_深层政府.txt  025第一部分人类网络_第四章03_绝对正确的科技.txt  027第一部分人类网络_第四章05_机构制度的反击.txt  028第一部分人类网络_第四章06_分裂的《圣经》.txt  029第一部分人类网络_第四章07_回声室.txt  030第一部分人类网络_第四章08_ 印刷、科学与女巫.txt  031第一部分人类网络_第四章09_ 西班牙宗教裁判所的拯救.txt  033第一部分人类网络_第四章11_自我修正机制.txt  036第一部分人类网络_第四章14_自我修正的局限.txt  037第一部分人类网络_第五章01_抉择：民主与极权制度简史.txt  042第一部分人类网络_第五章06_石器时代的民主制度.txt  048第一部分人类网络_第五章12_极权的三位一体.txt  051第一部分人类网络_第五章15_政党与教会.txt  054第一部分人类网络_第五章18_科学技术的钟摆.txt  055第二部分非生物网络_第六章01_新成员：与众不同的计算机.txt  058第二部分非生物网络_第六章04_有什么影响？.txt  059第二部分非生物网络_第六章05_承担责任.txt  061第二部分非生物网络_第六章07_别相信决定论.txt  063第二部分非生物网络_第七章02_不用睡觉的特工.txt  066第二部分非生物网络_第七章05_形形色色的监控.txt  067第二部分非生物网络_第七章06_社会信用体系.txt  069第二部分非生物网络_第八章01_可能出错：谬误百出的网络.txt  070第二部分非生物网络_第八章02_“点赞”的独裁.txt  073第二部分非生物网络_第八章05_回形针拿破仑.txt  (+14 more)
(+410 files in other folders)
